--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,7 +21,7 @@ main {
 .titulo{
   font-family: 'Merriweather', serif;
   font-weight: 100%;
-  font: size 40px;
+  font-size: 40px;
   text-align: center;
   margin: auto;
   padding: 0%;
@@ -65,11 +65,13 @@ main {
     width: 50%;
     padding: 30px;
   }
-  
+
   .destacado h3 {
-    font-size: 28px;
+    font-size: 25px;
     margin-bottom: 10px;
+    font-family: 'Courier New', Courier, monospace;
   }
+
   
   .destacado p {
     font-size: 18px;
@@ -77,17 +79,32 @@ main {
     line-height: 1.5;
   }
 
-  .fuente {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-
-
 
 .discografia{
   margin:auto;
   padding: 1%;
   width: 100%;
 }
+.subtitulogaleria{
+  font-size: 25px;
+  color: #ccc;
+  font-family: 'Courier New', Courier, monospace;
+  margin: 1%;
+}
+
+
+.card {
+  margin: 1%;
+  padding: auto;
+}
+
+.textocard {
+  text-align: center;
+  font-size: medium;
+}
+
+
+
 #imghistoria {
   margin: 0%;
   padding: 1%;
@@ -111,35 +128,55 @@ main {
  font-family: 'Dancing Script', cursive; 
  font-size: 33px;
  margin: 0%;
+ text-align: center;
   }
+.titulocontacto {
+  color: black;
+  font-family: 'Merriweather', serif;
+  font-weight: 100%;
+  font: size 40px;
+  text-align: center;
+  margin: auto;
+  padding: 0%;
+  width: 100%;
+  margin-top: auto;
+}
   .fondocontacto{
-    padding: 5px 5px 5px 5px;
+    background: url(https://pastillasdelabuelo.com.ar/wp-content/uploads/2019/07/banda_2019.jpg) no-repeat;
+    background-size: cover;
+    width: 100%;
+    margin: 0%;
+    padding-top: 0%;
   }      
 .form{
   font-family:Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 18px;
+  color: #000;
   text-align:center;
+  font-style: italic;
   margin: 10%;
   orientation: landscape;
-  background: url(https://pastillasdelabuelo.com.ar/wp-content/uploads/2019/07/banda_2019.jpg) no-repeat center;
   background-size:contain;
   background-position: center;
-  padding: 10px 10px 10px 10px; 
-  border-top: 6px solid white;
-  box-shadow: 0px 0px 10px 5px white;
 }
 @media (max-width: 480px) {
   .titulo {
     text-align: center;
+    font-size: 20px;
   }
-  
+
+  .fondocontacto {
+    padding-top: 5%;
+  }
   .form {
-    margin: 0 auto;
-    max-width: 300px;
-    margin: 5%;
+    margin: auto;
+    max-width: 339px;
+    width: 100%;
+    margin: 13%;
     padding: 12vw;
     border-top-width: 2vw;
     box-shadow: 0px 0px 4vw 2vw white;
+    text-align: center;
   }
   
   .form label,
@@ -199,8 +236,9 @@ a:hover{
 
 @media (max-width: 480px) {
 .footer{
-  width: 100%;
-  background-color: #828282;
+ height: auto;
+ padding: 2%;
+ font-size: 12px;
 }
 .main{
   width: 100%;
