--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,8 +46,9 @@ h1, h2, h3 {
 }
 
 .imgcarruselindex {
-  margin: 5;
-  padding: 0;
+  margin: 0%;
+  padding: 3%;
+  width: 85%;
 }
 
 .destacado {
@@ -56,25 +57,24 @@ h1, h2, h3 {
   align-items: center;
   margin: 5%;
 }
-.destacado .imgretro {
-  transform: translate(30px, 0px);
-  display: flex;
-  justify-content: space-between;
-}
-.destacado img {
-  width: 30%;
+
+img {
+  width: 25%;
   height: 10%;
 }
-.destacado .texto-destacado {
+
+.texto-destacado {
   width: 50%;
   padding: 30px;
 }
-.destacado h3 {
+
+h3 {
   font-size: 25px;
   margin-bottom: 10px;
   font-family: "Courier New", Courier, monospace;
 }
-.destacado p {
+
+p {
   font-size: 18px;
   margin-bottom: 20px;
   line-height: 1.5;
@@ -94,6 +94,9 @@ h1, h2, h3 {
   }
   #inicio .texto-destacado {
     margin-top: 10px;
+  }
+  #inicio .card {
+    margin: 5%;
   }
 }
 .cardindex {
