--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -48,26 +48,19 @@ main {
   }
   
   .imgcarruselindex {
-    margin: 5;
-    padding: 0;
-    
+    margin: 0%;
+    padding: 3%;
+    width: 85%;
     }
 
-      
     .destacado {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin: 5%;
-
-    .imgretro{
-      transform: translate(30px, 0px);
-      display: flex;
-      justify-content: space-between;
-
-    }
+      margin: 5%;}
+    
       img {
-        width: 30%;
+        width: 25%;
         height: 10%;
       }
     
@@ -87,7 +80,7 @@ main {
         margin-bottom: 20px;
         line-height: 1.5;
       }
-    }
+    
     @media (max-width: 480px) {
       #inicio .destacado {
           flex-direction: column;
@@ -102,6 +95,9 @@ main {
       }
       #inicio .texto-destacado {
           margin-top: 10px;
+      }
+     #inicio .card {
+        margin: 5%;
       }
     }
 
