--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@
 }
 
 main {
-  background-color: black;
+  background-color: rgb(39, 39, 39);
   color: #eee;
   font-family: Arial, sans-serif;
   margin: 0%;
@@ -16,10 +16,27 @@ h1, h2, h3 {
   color: #828282;
 }
 
+.logotitulo {
+  display: flex;
+  justify-content: center;
+}
+.logotitulo img {
+  margin-right: 10px;
+}
+@media (max-width: 768px) {
+  .logotitulo {
+    flex-direction: column;
+  }
+  .logotitulo img {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
+
 .titulo {
   font-family: serif;
   font-weight: 100%;
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
   margin: 1%;
   padding: 0%;
@@ -123,8 +140,8 @@ p {
 .botoncard {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #F5F5F5;
-  color: black;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
   font-size: 16px;
   border: none;
   border-radius: 5px;
@@ -186,13 +203,23 @@ main {
 }
 
 .card {
-  margin: 1%;
-  padding: auto;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
+  margin: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .textocard {
-  text-align: center;
-  font-size: medium;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 0;
 }
 
 .steps {
@@ -412,6 +439,61 @@ main {
     width: 100%;
   }
 }
+.grid-gallery {
+  display: grid;
+  grid-auto-rows: 200px;
+  grid-gap: 1rem;
+  grid-auto-flow: row dense;
+}
+@media all and (min-width: 320px) {
+  .grid-gallery {
+    grid-template-columns: 1fr;
+  }
+}
+@media all and (min-width: 768px) {
+  .grid-gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media all and (min-width: 1024px) {
+  .grid-gallery {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+.grid-gallery__item:nth-child(11n+1) {
+  grid-column: span 1;
+}
+.grid-gallery__item:nth-child(11n+4) {
+  grid-column: span 2;
+  grid-row: span 1;
+}
+@media all and (min-width: 320px) {
+  .grid-gallery__item:nth-child(11n+4) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+}
+.grid-gallery__item:nth-child(11n+6) {
+  grid-column: span 3;
+  grid-row: span 1;
+}
+.grid-gallery__item:nth-child(11n+7) {
+  grid-column: span 1;
+  grid-row: span 2;
+}
+.grid-gallery__item:nth-child(11n+8) {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+.grid-gallery__item:nth-child(11n+9) {
+  grid-row: span 3;
+}
+.grid-gallery__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .subtitulogaleria {
   font-size: 25px;
   color: #ccc;
@@ -425,13 +507,14 @@ main {
   font-size: 33px;
   margin: 0%;
   text-align: center;
-  color: #000;
+  color: #fffbfb;
 }
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .form-container {
@@ -444,15 +527,14 @@ main {
   text-align: center;
 }
 
-.image-container img {
-  max-width: 100%;
-  height: auto;
+.textoform {
+  margin: 15px;
 }
 
 .form {
   font-family: Helvetica, sans-serif;
-  font-size: 18px;
-  color: #c5c0c0;
+  font-size: 20px;
+  color: rgba(197, 192, 192, 0.6117647059);
   text-align: center;
   font-style: italic;
   margin: 2rem;
@@ -460,7 +542,22 @@ main {
   box-shadow: 0px 0px 1px 1px white;
 }
 
+input[type=text] {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  background-color: transparent;
+  padding: 5px;
+  outline: none;
+  color: rgba(238, 238, 238, 0.7725490196);
+}
+input[type=text]:focus {
+  border-bottom-color: #000;
+}
+
 @media (max-width: 480px) {
+  .titulo {
+    font-size: 10px;
+  }
   .container {
     flex-direction: column;
   }
@@ -468,9 +565,8 @@ main {
     margin-right: 0;
     margin-bottom: 2rem;
   }
-  .image-container {
-    text-align: center;
-    margin-bottom: 2rem;
+  .subtitulogaleria {
+    font-size: 16px;
   }
   .form {
     margin: 2rem;
@@ -488,43 +584,33 @@ main {
   .form input[type=reset] {
     margin-top: 1rem;
   }
-  .form img {
-    max-width: 100%;
-    height: auto;
-  }
 }
 .footer {
-  width: 100%;
-  height: 30%;
-  padding: 1%;
-  margin: 0%;
-  border-top: 1px solid #ccc;
-  background-color: #a7a4a4;
+  background-color: #222;
+  padding: 5px;
   text-align: center;
-  font-size: 14px;
-  text-decoration: none;
+  align-items: center;
 }
 
 .nombrefooter {
-  margin: 0;
-  color: #000;
-  font-family: "Merriweather", serif;
-  font-size: 150%;
+  color: #fff;
+  font-size: 24px;
 }
 
-.logo {
-  object-position: left;
+.redes {
+  margin-bottom: 10px;
 }
-
-a {
+.redes a {
+  color: #fff;
   text-decoration: none;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  color: #000000;
+  margin-right: 10px;
+}
+.redes a i {
+  color: #fff;
 }
 
-a:hover {
-  color: rgb(53, 53, 53);
-  background-color: #a7a4a4;
+.logo img {
+  height: 80px;
 }
 
 /*# sourceMappingURL=estilos.css.map */
