--- a/sass/assets/_footer.scss
+++ b/sass/assets/_footer.scss
@@ -1,36 +1,35 @@
-$color-primario: #a7a4a4;
+$color-primario: #222;
+$color-texto: #fff;
 
 .footer {
-    width: 100%;
-    height: 30%;
-    padding: 1%;
-    margin: 0%;
-    border-top: 1px solid #ccc;
-    background-color: $color-primario;
-    text-align: center;
-    font-size: 14px;
-    text-decoration: none;
+  background-color: $color-primario;
+  padding: 5px;
+  text-align: center;
+  align-items: center;
+
+}  
+  .nombrefooter {
+    color: $color-texto;
+    font-size: 24px;
   }
   
-  .nombrefooter {
-    margin: 0;
-    color: #000;
-    font-family: 'Merriweather', serif;
-    font-size: 150%;
+  .redes {
+    margin-bottom: 10px;
+    
+    a {
+      color: $color-texto;
+      text-decoration: none;
+      margin-right: 10px;      
+      i {
+        color: $color-texto;
+      }
+    }
   }
   
   .logo {
-    object-position: left;
+    img {
+      height: 80px;
+    }
   }
-  
-  a {
-    text-decoration: none;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: #000000;}
 
-    a:hover {
-        color: rgb(53, 53, 53);
-        background-color: $color-primario;
-      }
 
-    
