--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,7 +56,7 @@ h1, h2, h3 {
   align-items: center;
   padding: 10px 0;
   margin: 1px;
-  background-color: #c5c0c0;
+  background-color: #bdb9b9;
   justify-content: space-between;
   font-size: 20px;
   position: sticky;
@@ -112,7 +112,7 @@ p {
   }
 }
 .cardindex {
-  background-color: #c5c0c0;
+  background-color: #bdb9b9;
   color: #000000;
   box-shadow: 0px 2px 10px rgb(160, 160, 160);
 }
@@ -126,27 +126,31 @@ p {
 .linkindex {
   text-decoration: none;
   font-family: Georgia, Times, "Times New Roman", serif;
-  color: #c5c0c0;
+  color: black;
   font-size: 20px;
   border-radius: 1px;
   transition: color 0.3s ease, background-color 0.3s ease;
+  background-color: #bdb9b9;
 }
 .linkindex:hover {
   color: rgb(53, 53, 53);
-  background-color: #c5c0c0;
+  background-color: #bdb9b9;
   border-radius: 5px;
 }
 
-.botoncard {
+.boton, .botoncard1, .linkindex {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #000000;
-  color: rgb(255, 255, 255);
   font-size: 16px;
   border: none;
   border-radius: 5px;
   text-decoration: none;
   transition: background-color 0.3s ease;
+}
+
+.botoncard1 {
+  background-color: #000000;
+  color: rgb(255, 255, 255);
 }
 
 .botoncard:hover {
@@ -444,15 +448,18 @@ main {
   grid-auto-rows: 200px;
   grid-gap: 1rem;
   grid-auto-flow: row dense;
+  overflow-x: hidden;
 }
-@media all and (min-width: 320px) {
+@media all and (min-width: 480px) {
   .grid-gallery {
     grid-template-columns: 1fr;
+    width: 100%;
   }
 }
 @media all and (min-width: 768px) {
   .grid-gallery {
     grid-template-columns: repeat(3, 1fr);
+    width: 100%;
   }
 }
 @media all and (min-width: 1024px) {
@@ -467,7 +474,7 @@ main {
   grid-column: span 2;
   grid-row: span 1;
 }
-@media all and (min-width: 320px) {
+@media all and (min-width: 480px) {
   .grid-gallery__item:nth-child(11n+4) {
     grid-column: span 1;
     grid-row: span 1;
