--- a/sass/_tienda.scss
+++ b/sass/_tienda.scss
@@ -50,7 +50,12 @@ aside {
   gap: 1rem;
 }
 
+.carrito-vacio {
+  color: $color-terciario;
+}
+
 .filtro-categorias,
+.carrito-producto-eliminar,
 .producto-agregar,
 .carrito-acciones-vaciar,
 .carrito-acciones-comprar {
@@ -58,7 +63,7 @@ aside {
   color: $color-terciario;
   border: 2px solid $color-primario;
   border-radius: 1rem;
-  padding: 1rem 2rem;
+  padding: 1%;
   text-transform: uppercase;
   cursor: pointer;
   transition: background-color 0.2s, color 0.2s;
@@ -72,6 +77,13 @@ aside {
   background-color: $color-primario;
   color: $color-secundario;
   border: 2px solid $color-secundario;
+}
+
+.carrito-producto-cantidad,
+.carrito-producto-precio,
+.carrito-producto-subtotal,
+.carrito-acciones-total{
+  color: $color-terciario;
 }
 
 .main-tienda {
@@ -88,11 +100,11 @@ aside {
   margin-bottom: 2rem;
 }
 
-.contenedor-productos {
+#contenedor-productos {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-  margin: 1rem;
+  grid-template-columns: repeat(2, 1fr); 
+  gap: 2; 
+  margin: 1%;
 }
 .producto-imagen {
     max-width: 100%; 
@@ -107,7 +119,8 @@ aside {
   margin: 2%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: transform 0.2s;
-  cursor: pointer; 
+  cursor: pointer;
+  color: $color-terciario; 
 }
 
 .producto-carrito {
@@ -166,4 +179,9 @@ aside {
 
 #imprimir-resumen:hover {
   background-color: darken($color-terciario, 10%);
+}
+
+
+#imprimir-resumen{
+  display: none;
 }
