--- a/sass/_tienda.scss
+++ b/sass/_tienda.scss
@@ -100,6 +100,53 @@ aside {
   margin-bottom: 2rem;
 }
 
+.carrito-producto {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  .producto-imagen-carrito {
+    max-width: 80px;
+    max-height: 80px;
+    margin-right: 10px;
+  }
+  .carrito-producto-titulo {
+    flex: 1;
+
+    h3 {
+      font-size: 1.2rem;
+      margin: 0;
+    }
+  }
+
+  .carrito-producto-cantidad,
+  .carrito-producto-precio,
+  .carrito-producto-subtotal {
+    flex: 1;
+    text-align: center;
+
+    p {
+      font-size: 1rem;
+      margin: 0;
+    }
+  }
+  .carrito-producto-eliminar {
+    background-color: #ff6347; // Color rojo
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+    i {
+      margin-right: 5px;
+    }
+  }
+}
+
+
 #contenedor-productos {
   display: grid;
   grid-template-columns: repeat(2, 1fr); 
@@ -180,7 +227,6 @@ aside {
 #imprimir-resumen:hover {
   background-color: darken($color-terciario, 10%);
 }
-
 
 #imprimir-resumen{
   display: none;
